# zero2prod

./: Cargo.toml  Dockerfile  Dockerfile.sqlx  README.md  compose.yml  configuration.yml
.github/workflows/: ci.yml  release.yml
.sqlx/: query-c87df2d7cf63889bb0b82a42037f3deb1d631bf9991a5c4eefd378e0411403b8.json
migrations/: 20260216225726_init.down.sql  20260216225726_init.up.sql
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
